# weather_router

./: .gitignore  LICENSE  README.md  conda-lock.default.yml  conda-lock.weather-router.yml  conda-project.yml  environment.yml  pyproject.toml
app/: analyzer.py  models.py
app/services/: gpx_parser.py  route_scorer.py  weather.py
notebooks/: demo.ipynb
scratch/: open_meteo.ipynb
tests/: test_gpx_parser.py  test_route_scorer.py  test_weather.py
