[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-router"
version = "1.0.0"
description = "Analyze GPS routes against weather forecasts to score riding conditions."
requires-python = ">=3.10"
authors = [{ name = "mbbrueckner" }]
dependencies = [
    "gpxpy",
    "rdp",
    "numpy",
    "openmeteo-requests",
    "openmeteo-sdk",
]

[project.optional-dependencies]
notebook = [
    "jupyter",
    "ipywidgets>=8.0",
    "folium",
    "voila",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
